# CommunityDetectionCodes

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md
2009-Connected-Iterative-Scan/src-refactor/: CMakeLists.txt  ReadMe.md
2009-Connected-Iterative-Scan/src-refactor/graph/: network.cc  network.h  temporal_network.cc
2009-Connected-Iterative-Scan/src-refactor/util/: graph_io_helper.h  io_helper.cc  parameters_helper.cc  parameters_helper.h  string_helper.cc  string_helper.h
2009-EAGLE/src/: CMakeLists.txt  Communities.cpp  Communities.h  MaxCache.cpp  ReadMe.md  eagle.cpp  eagle.h  main.cpp  max_cache.cpp
2011-GCE/src-refactor/: CMakeLists.txt  Community_Finder.cpp  Community_Finder.h  Range.hpp  ReadMe.md  Seed.h  aaron_utils.hpp  clique_percolation.hpp  cliques.cpp  cliques.hpp  find_communities.cpp  graph_analysis.hpp  graph_loading.cpp  graph_loading.hpp  graph_representation.cpp  graph_representation.hpp  iterative.hpp  modularity.hpp
2011-GCE/src-refactor/algorithm/: Seed.cpp  Seed.h  cliques.cpp  cliques.hpp  community_finder.cpp  community_finder.h  find_communities.cpp
2011-GCE/src-refactor/useless/: clique_percolation.hpp  graph_analysis.hpp
2011-GCE/src-refactor/util/: aaron_utils.cpp
2011-GCE/src-refactor/util/graph/: graph_loading.cpp  graph_loading.hpp  graph_representation.cpp
2012-CPMOnSteroids/src_original/: Makefile.in  README  cliques.c  configure  configure.in  dsforest.c  output_communities.c
2012-CPMOnSteroids/src_original/extras/: maximal_cliques.c
2012-CPMOnSteroids/src_original/include/: common.h  output_communities.h
Algorithms/2011-MOSES/src-refactor/: CMakeLists.txt  Makefile  groupStats.cpp
Algorithms/2011-MOSES/src-refactor/algorithm/: ReadMe.md  group_status_exec.cpp  grouping.cpp  grouping.hpp  moses.cpp  overlapping.cpp  overlapping.hpp
Algorithms/2011-MOSES/src-refactor/doc/: comment.txt
Algorithms/2011-MOSES/src-refactor/util/: Range.hpp  aaron_utils.cpp  aaron_utils.hpp  range.cpp  range.hpp
Algorithms/2011-OSLOM-v2/src-refactor/: CMakeLists.txt  main_body.cpp  main_directed.cpp  main_undirected.cpp  oslom_net_global.h  oslom_net_unions.cpp  set_parameters.h  try_homeless_dir.cpp  try_homeless_undir.cpp
Algorithms/2011-OSLOM-v2/src-refactor/algorithm/: directed_oslomnet_evaluate.h  egocentric_undir.h  hierarchies.cpp  hierarchies.h  log_table.h  louvain_oslomnet_dir.h  main_body.cpp  main_directed.cpp  main_undirected.cpp
Algorithms/2011-OSLOM-v2/src-refactor/collection/: module_collection.h
Algorithms/2011-OSLOM-v2/src-refactor/common/: cast.cpp  cc.h  histograms.h  log_table.h
Algorithms/2011-OSLOM-v2/src-refactor/evaluation/: undirected_oslomnet_evaluate.h
Algorithms/2011-OSLOM-v2/src-refactor/graph/: louvain_oslomnet.cpp  oslom_net_global.cpp  oslom_net_global.h
Algorithms/2011-OSLOM-v2/src-refactor/input_output/: pajek.cpp  partition.h  tab_degree.h
Algorithms/2011-OSLOM-v2/src-refactor/metric/: mutual.h
Algorithms/2011-OSLOM-v2/src-refactor/program_options/: set_parameters.h
Algorithms/2011-OSLOM-v2/src-refactor/util/: combinatorics.cpp  combinatorics.h  log_table.cpp  log_table.h  random.cpp  random.h
Algorithms/2011-OSLOM-v2/src-refactor/util/common/: cast.h  (+8 more)
Algorithms/2011-OSLOM-v2/src-refactor/visualization/: hier.cpp  hier.h  main.cpp  main_pajek.cpp  main_pajek_directed.cpp  netvi.h  position.cpp  static_network.cpp  static_network.h  visual_net.cpp  visual_net.h
Algorithms/2012-CPMOnSteroids/src_refactor/src/: CMakeLists.txt  cliques.c  cos.c  cospoc.c  dsforest.c  main.c  matrix.c  output_communities.c
Algorithms/2012-Fast-Clique-Percolation/src_refactor/: CMakeLists.txt  ReadMe.md  cliques.cpp  cmdline.c  pp.hpp
Algorithms/2012-Fast-Clique-Percolation/src_refactor/graph/: network.hpp  saving.cpp  strings.cpp  weights.hpp
Algorithms/2013-SVINET/src-cmake/src/: CMakeLists.txt  Makefile.am  Makefile.in  env.hh  fastamm.hh  fastamm2.hh  fastinit.hh  linksampling.cc  linksampling.hh  log.hh  main.cc  mmsbinfer.hh  mmsbinferorig.hh  mmsborig.hh  network.hh  sbm.cc  sbm.hh
Algorithms/2013-SVINET/svinet-master/: AUTHORS  Makefile.in  NEWS  config.h.in  configure.ac
Algorithms/2013-SVINET/svinet-master/example/: LFR-network-n1000-k28.txt  ca-AstroPh.csv  n75-k4-mmsb-batch.tgz
Algorithms/2013-SVINET/svinet-master/patches/: ammsb1.patch
Algorithms/2013-SVINET/svinet-master/src/: community.hh  env.hh  fastamm.cc  fastamm.hh  fastamm2.cc  fastinit.hh  fastqueue.hh  main.cc  mmsbgen.cc  mmsbgen.hh  mmsbinferorig.cc  network.hh  thread.cc  thread.hh
Benchmark/2009-LFR-Benchmark/src_refactor_cpp/: .gitignore  CMakeLists.txt  ReadMe.md  benchmark_gen.py  run_undir_gperf.sh  run_undir_perf.sh
Benchmark/2009-LFR-Benchmark/src_refactor_cpp/binary_graph/: benchm.cpp  set_parameters.h
Benchmark/2009-LFR-Benchmark/src_refactor_cpp/binary_networks/: CMakeLists.txt  ReadMe.md  benchm.cpp  set_parameters.h
Benchmark/2009-LFR-Benchmark/src_refactor_cpp/deprecated/: print.h
Benchmark/2009-LFR-Benchmark/src_refactor_cpp/directed_graph/: CMakeLists.txt  ReadMe.md  benchm.cpp  set_parameters.cpp  set_parameters.h
Benchmark/2009-LFR-Benchmark/src_refactor_cpp/documents/: ReadMe.md
Benchmark/2009-LFR-Benchmark/src_refactor_cpp/hierarchical_comm_graph/: CMakeLists.txt  ReadMe.md  benchm.cpp  binary_benchm.cpp  binary_benchm.h  set_parameters.cpp  set_parameters.h
Benchmark/2009-LFR-Benchmark/src_refactor_cpp/playground/: CMakeLists.txt  nmi_usage_demo.cpp  tabdeg_demo.cpp
Benchmark/2009-LFR-Benchmark/src_refactor_cpp/undirected_graph/: CMakeLists.txt  ReadMe.md  benchm.cpp  set_parameters.cpp  set_parameters.h
Benchmark/2009-LFR-Benchmark/src_refactor_cpp/util/: cast.cpp  cast.h  cc.cpp  cc.h  combinatorics.cpp  combinatorics.h  histograms.cpp  histograms.h  pretty_print.h  print.h  random.cpp  random.h
NonOverlappingCodes/2005-Markov-Clustering/mcl-14-137/: AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  VERSION  acinclude.m4  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  configure.ac.in  mkinstalldirs  setversion
(+1721 files in other folders)
