bin_PROGRAMS = svinet
svinet_SOURCES = mmsbinfer.hh mmsbinfer.cc\
	linksampling.hh	linksampling.cc\
	matrix.hh env.hh log.cc log.hh\
	network.cc network.hh\
	thread.hh thread.cc\
	mmsbinferorig.hh mmsbinferorig.cc\
	fastamm.cc fastamm.hh\
	sbm.hh sbm.cc\
	fastamm2.cc fastamm2.hh\
	mmsbgen.cc mmsbgen.hh\
	mmsborig.cc mmsborig.hh\
	main.cc \
	tsqueue.hh fastqueue.hh community.hh \
	fastinit.hh fastinit.cc
