## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.7 2007-01-29 11:35:37 flux Exp $

exampledir = $(datadir)/doc/$(PACKAGE)/examples

example_DATA = falkner.mci falkner2.mci falkner.coords make-falkner.pl \
   proteins.mci matula.mci lattice.mci honey.mci seven.mci infinity.mci \
   friends small.mci small.map small.tab fznyy.tab fznyy.mci small64.mci \
	petersen.mci \
   tiny-min.mci tiny-nil.mci tiny-nilnine.mci tiny-ninenil.mci tiny-one.mci tiny-zero.mci \
   data.raw data.hdr data.tab data.abc.raw data.abc.hdr data.abc.map \
	T Tx Ty Txy

EXTRA_DIST = $(example_DATA)

