## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.7 2007-01-29 11:35:37 flux Exp $

exampledir = $(datadir)/doc/$(PACKAGE)/examples

example_DATA = fa_1024.png fa_400.png fa_600.png fa_large.png fa.ps falkner-bidi.ps falkner.ps small.ps small.png

EXTRA_DIST = $(example_DATA)


