## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.3 2007-04-19 16:06:12 flux Exp $

include $(top_srcdir)/include/include.am

this = clxcoarse minimcl mlm-fifofum mlm-summary mlm-quilt \
			gengraph movgraph piclo pichi clmsnare mlm-analyze docme mcxplotlines.R

noinst_SCRIPTS = tree3.pl packed-example.sh packed-example2.sh

dist_bin_SCRIPTS = clxdo

EXTRA_DIST = $(this) $(noinst_SCRIPTS)


